add brand_page and nav_links

--- a/brand.html
+++ b/brand.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Каталог</title>
+    <title>Бренд</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -42,7 +42,7 @@
                             <li><a class="main-header-nav-link link-female" href="#">Женские</a></li>
                             <li><a class="main-header-nav-link" href="#">Распродажа</a></li>
                             <li><a class="main-header-nav-link" href="#">Контакты</a></li>
-                            <li><button class="main-header-nav-search" href="#"><i class="fa fa-search" aria-hidden="true"></i></button></li>
+                            <li><button class="main-header-nav-search"><i class="fa fa-search" aria-hidden="true"></i></button></li>
                         </ul>
                     </nav>
                 </div>
@@ -54,15 +54,15 @@
     <!-- Bread crumb -->
     <section class="bread-crumb">
         <div class="main">
-            <div class="bread_crumb-block"><a class="bread_crumb-block__link" href="#"><i class="fa fa-home" aria-hidden="true"></i></a><span><i class="fa fa-angle-right" aria-hidden="true"></i></span><a class="bread_crumb-block__link" href="#">Мужские</a></div>
+            <div class="bread_crumb-block"><a class="bread_crumb-block__link" href="#"><i class="fa fa-home" aria-hidden="true"></i></a><span><i class="fa fa-angle-right" aria-hidden="true"></i></span><a class="bread_crumb-block__link" href="#">Lacoste</a></div>
         </div>
     </section>
     <!-- Bread crumb -->
 
-    <!-- Catalogue content -->
-    <section class="catalogue">
+    <!-- Brand content -->
+    <section class="brand">
         <div class="main">
-            <h2 class="main-title">Мужские духи</h2>
+            <h2 class="main-title">Lacoste</h2>
             <div class="content">
                 <div class="filter">
                     <form action="">
@@ -99,18 +99,18 @@
                 </div>
                 <div class="content-block">
                     <div class="description-block">
-                        <div class="catalogue-image"><img src="images/catal-photo.jpg" alt="Photo" width="273" height="374"></div>
+                        <div class="brand-image"><img src="images/brand_lacoste.jpg" alt="Lacoste" width="273" height="295"></div>
                         <div class="catalogue-info">
+                            <h2 class="catalogue-info__title">Lacoste (France) Мир Франции</h2>
                             <p class="catalogue-info__text">
-                                Первая туалетная вода напоминала современную разве что ароматностью: в древности женщины смешивали различные масла, чтобы получить новые, неповторимые запахи.
+                                Компания которая имеет милионы поклонников  на всех континентах Lacoste. Рене Лакост известный Французкий теннесист в 1926 году изобрел новаторский продукт. Футболку для тенниса из воздушной  ткани, очень комфортной для игры. Рене Лакост из за его неуступчивого и сильного характера прозвали Алигатором. Его друг вышил эмблему зеленого аллигатора на фирменной футболке в которой играл Рене и в последствии этот логотип  всемирно известный и популярный. С течением времени лакоста расширила производство и выросла до размеров успешной компании с огромными оборотами.
                                 <br><br>
-                                Ни одно важное мероприятие, как 100 лет назад, так и сегодня, трудно представить без калейдоскопа волнующих запахов, доносящихся отовсюду. Каждая уважающая себя женщина и каждый мужчина, желающие чего-то добиться, уже давно поняли, что без правильно подобранного аромата сделать это непросто.
-                            </p>
-                            <h2 class="catalogue-info__title">Подзаголовк</h2>
-                            <p class="catalogue-info__text">
-                                Мерилин Монро, например, на вопрос: «Что вы надеваете на ночь?» отвечала просто: «Всего ничего, лишь две капли Шанель №5». Кто знает, может, своей популярностью она обязана именно этому легендарному аромату... Кстати, до сих пор творение Коко Шанель является эталоном женственности и символом французской роскоши. Секрет такой популярности сложно разгадать, но именно Коко сказала фразу, которой можно объяснить весь смысл существования парфюмерии:
+                                Компания приуспела в выпуске спортивной одежды и с 1984 году запустила не менее успешное производство парфюмерии.
                             </p>
                         </div>
+                    </div>
+                    <div class="video-block">
+                        <img src="images/video_img.jpg" alt="video">
                     </div>
                     <div class="content-filter">
                         <div class="content-filter-block-1">
@@ -361,7 +361,7 @@
             </div>
         </div>
     </section>
-    <!-- End catalogue content -->
+    <!-- End brand content -->
 
     <!-- Footer -->
     <footer class="footer">
