--- a/card_item.html
+++ b/card_item.html
@@ -255,6 +255,13 @@
                             </div>
                         </div>
                     </div>
+                    <div class="card-video_reviews-wrap">
+                        <div class="card-video_review-item">
+                            <div class="card-video_review-video"><img src="images/review_video.jpg" alt="Video"></div>
+                            <div class="card-video_review__name"></div>
+                            <div class="card-video_review__text"></div>
+                        </div>   
+                    </div>
                 </div>
             </div>
         </div>
