push blog and blog_article, and drop menu

--- a/catalogue.html
+++ b/catalogue.html
@@ -35,14 +35,219 @@
                     <nav class="main-header-nav">
                         <ul>
                             <li><a class="main-header-nav-link" href="#">Главная</a></li>
-                            <li><a class="main-header-nav-link link-brand" href="#">Бренды</a></li>
-                            <li class="link-male">
-                                <a class="main-header-nav-link" href="#">Мужские</a>
+                            <li class="drop-link">
+                                <a class="main-header-nav-link" href="#">Бренды</a>
+                                <ul class="drop-alphabet">
+                                    <li class="drop-letter">A
+                                        <ul class="drop-brand">
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="drop-letter">
+                                        B
+                                        <ul class="drop-brand">
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="drop-letter">C</li>
+                                    <li class="drop-letter">D</li>
+                                    <li class="drop-letter">E</li>
+                                    <li class="drop-letter">F</li>
+                                    <li class="drop-letter">G</li>
+                                    <li class="drop-letter">H</li>
+                                    <li class="drop-letter">I</li>
+                                    <li class="drop-letter">J</li>
+                                    <li class="drop-letter">K</li>
+                                    <li class="drop-letter">L</li>
+                                    <li class="drop-letter">M</li>
+                                    <li class="drop-letter">N</li>
+                                    <li class="drop-letter">O</li>
+                                    <li class="drop-letter">P</li>
+                                    <li class="drop-letter">Q</li>
+                                    <li class="drop-letter">R</li>
+                                    <li class="drop-letter">S</li>
+                                    <li class="drop-letter">T</li>
+                                    <li class="drop-letter">U</li>
+                                    <li class="drop-letter">V</li>
+                                    <li class="drop-letter">W</li>
+                                    <li class="drop-letter">X</li>
+                                    <li class="drop-letter">Y</li>
+                                    <li class="drop-letter">Z</li>
+                                </ul>
                             </li>
-                            <li><a class="main-header-nav-link link-female" href="#">Женские</a></li>
+                            <li class="drop-link male">
+                                <a class="main-header-nav-link" href="#">Мужские</a>
+                                <ul class="drop-alphabet">
+                                    <li class="drop-letter">A
+                                        <ul class="drop-brand">
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="drop-letter">
+                                        B
+                                        <ul class="drop-brand">
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="drop-letter">C</li>
+                                    <li class="drop-letter">D</li>
+                                    <li class="drop-letter">E</li>
+                                    <li class="drop-letter">F</li>
+                                    <li class="drop-letter">G</li>
+                                    <li class="drop-letter">H</li>
+                                    <li class="drop-letter">I</li>
+                                    <li class="drop-letter">J</li>
+                                    <li class="drop-letter">K</li>
+                                    <li class="drop-letter">L</li>
+                                    <li class="drop-letter">M</li>
+                                    <li class="drop-letter">N</li>
+                                    <li class="drop-letter">O</li>
+                                    <li class="drop-letter">P</li>
+                                    <li class="drop-letter">Q</li>
+                                    <li class="drop-letter">R</li>
+                                    <li class="drop-letter">S</li>
+                                    <li class="drop-letter">T</li>
+                                    <li class="drop-letter">U</li>
+                                    <li class="drop-letter">V</li>
+                                    <li class="drop-letter">W</li>
+                                    <li class="drop-letter">X</li>
+                                    <li class="drop-letter">Y</li>
+                                    <li class="drop-letter">Z</li>
+                                </ul>
+                            </li>
+                            <li class="drop-link female">
+                                <a class="main-header-nav-link" href="#">Женские</a>
+                                <ul class="drop-alphabet">
+                                    <li class="drop-letter">A
+                                        <ul class="drop-brand">
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Abrand</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="drop-letter">
+                                        B
+                                        <ul class="drop-brand">
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                            <li class="drop-brand_link"><a href="#">Bbrand</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="drop-letter">C</li>
+                                    <li class="drop-letter">D</li>
+                                    <li class="drop-letter">E</li>
+                                    <li class="drop-letter">F</li>
+                                    <li class="drop-letter">G</li>
+                                    <li class="drop-letter">H</li>
+                                    <li class="drop-letter">I</li>
+                                    <li class="drop-letter">J</li>
+                                    <li class="drop-letter">K</li>
+                                    <li class="drop-letter">L</li>
+                                    <li class="drop-letter">M</li>
+                                    <li class="drop-letter">N</li>
+                                    <li class="drop-letter">O</li>
+                                    <li class="drop-letter">P</li>
+                                    <li class="drop-letter">Q</li>
+                                    <li class="drop-letter">R</li>
+                                    <li class="drop-letter">S</li>
+                                    <li class="drop-letter">T</li>
+                                    <li class="drop-letter">U</li>
+                                    <li class="drop-letter">V</li>
+                                    <li class="drop-letter">W</li>
+                                    <li class="drop-letter">X</li>
+                                    <li class="drop-letter">Y</li>
+                                    <li class="drop-letter">Z</li>
+                                </ul>
+                            </li>
                             <li><a class="main-header-nav-link" href="#">Распродажа</a></li>
                             <li><a class="main-header-nav-link" href="#">Контакты</a></li>
-                            <li><button class="main-header-nav-search" href="#"><i class="fa fa-search" aria-hidden="true"></i></button></li>
+                            <li><button class="main-header-nav-search"><i class="fa fa-search" aria-hidden="true"></i></button></li>
                         </ul>
                     </nav>
                 </div>
@@ -101,13 +306,13 @@
                     <div class="description-block">
                         <div class="catalogue-image"><img src="images/catal-photo.jpg" alt="Photo" width="273" height="374"></div>
                         <div class="catalogue-info">
-                            <p class="catalogue-info__text">
+                            <p class="content__text">
                                 Первая туалетная вода напоминала современную разве что ароматностью: в древности женщины смешивали различные масла, чтобы получить новые, неповторимые запахи.
                                 <br><br>
                                 Ни одно важное мероприятие, как 100 лет назад, так и сегодня, трудно представить без калейдоскопа волнующих запахов, доносящихся отовсюду. Каждая уважающая себя женщина и каждый мужчина, желающие чего-то добиться, уже давно поняли, что без правильно подобранного аромата сделать это непросто.
                             </p>
-                            <h2 class="catalogue-info__title">Подзаголовк</h2>
-                            <p class="catalogue-info__text">
+                            <h2 class="content__title">Подзаголовк</h2>
+                            <p class="content__text">
                                 Мерилин Монро, например, на вопрос: «Что вы надеваете на ночь?» отвечала просто: «Всего ничего, лишь две капли Шанель №5». Кто знает, может, своей популярностью она обязана именно этому легендарному аромату... Кстати, до сих пор творение Коко Шанель является эталоном женственности и символом французской роскоши. Секрет такой популярности сложно разгадать, но именно Коко сказала фразу, которой можно объяснить весь смысл существования парфюмерии:
                             </p>
                         </div>
